[package]
name = "vPoW-work-server"
version = "0.1.1"
authors = ["Lee Bousfield <ljbousfield@gmail.com>", "Ryan LeFevre <meltingice8917@gmail.com>", "Guilherme Lawless <guilherme.lawless@gmail.com>", "Vitaminion0001"]
license = "BSD-2-Clause"
repository = "https://github.com/vitaminion0001/"
description = "A work server to be used for the Distributed Proof of Work System - compatible with the vite chain"

[dependencies]
futures = "0.1.17"
hyper = "0.11.25"
clap = "2.31.2"
ocl = "0.19"
serde_json = "1.0.17"
hex = "0.3.2"
rand = "0.4.2"
blake2 = "0.7.1"
digest = "0.7.2"
byteorder = "1.2.2"
parking_lot = "0.5.5"
time = "0.1.39"
chrono = "0.4"